--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -1,16 +1,9 @@
-name: 'V2V Complete Pipeline'
+name: 'V2V Pipeline'
 
 on:
-  schedule:
-    - cron: '0 */3 * * *'
   workflow_dispatch:
   push:
-    branches: [ main ]
-    paths:
-      - 'scraper.py'
-      - 'sources.json'
-      - 'worker.js'
-      - 'wrangler.toml'
+    branches: [main]
 
 permissions:
   contents: write
@@ -18,7 +11,7 @@ permissions:
   id-token: write
 
 jobs:
-  pipeline:
+  deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     
@@ -32,18 +25,27 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-        
+
     - name: Install Python Deps
       run: pip install requests PyGithub PyYAML
 
     - name: Run Scraper
+      run: python scraper.py || true
       timeout-minutes: 45
-      run: timeout 2700 python scraper.py || true
       env:
         GH_PAT: ${{ secrets.GH_PAT }}
         GITHUB_SEARCH_LIMIT: 150
 
-    - name: Setup Node.js
+    - name: Commit Changes
+      run: |
+        git config user.name "V2V Bot"
+        git config user.email "bot@v2v.dev"
+        git add *.json *.yml *.txt || true
+        git diff --quiet || git commit -m "Update $(date '+%Y-%m-%d')" || true
+        git push || true
+      continue-on-error: true
+
+    - name: Setup Node
       uses: actions/setup-node@v4
       with:
         node-version: '20'
@@ -51,29 +53,16 @@ jobs:
     - name: Install Wrangler
       run: npm install -g wrangler
 
-    - name: Deploy All Workers
+    - name: Deploy Workers
       if: ${{ secrets.CLOUDFLARE_API_TOKEN != '' }}
       run: |
-        echo "🚀 Deploying 4 Workers..."
-        wrangler deploy --env v2v-proxy
-        wrangler deploy --env v2v
-        wrangler deploy --env winter-hill-0307
-        wrangler deploy --env rapid-scene-1da6
-        echo "✅ All workers deployed!"
+        wrangler deploy --env v2v-proxy || true
+        wrangler deploy --env v2v || true
+        wrangler deploy --env winter-hill-0307 || true
+        wrangler deploy --env rapid-scene-1da6 || true
       env:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      continue-on-error: false
-
-    - name: Commit Changes
-      run: |
-        git config user.name "V2V Bot"
-        git config user.email "bot@v2v.dev"
-        git add all_live_configs.json clash_subscription.yml cache_version.txt || true
-        git diff --quiet && git diff --staged --quiet || {
-          git commit -m "Update: $(date '+%Y-%m-%d %H:%M')"
-          git push origin main
-        }
       continue-on-error: true
 
     - name: Deploy Vercel
@@ -83,19 +72,17 @@ jobs:
         vercel-token: ${{ secrets.VERCEL_TOKEN }}
         vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
         vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-        vercel-args: '--prod --force'
+        vercel-args: '--prod'
       continue-on-error: true
 
-    - name: Deploy Arvan S3
+    - name: Deploy Arvan
       if: ${{ secrets.ARVAN_ACCESS_KEY_ID != '' }}
       run: |
         curl -s "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "aws.zip"
-        unzip -q aws.zip
-        sudo ./aws/install
+        unzip -q aws.zip && sudo ./aws/install
         aws s3 sync . s3://${{ secrets.ARVAN_BUCKET_NAME }}/ \
           --endpoint-url=https://s3.ir-thr-at1.arvanstorage.ir \
-          --exclude ".git/*" --exclude ".github/*" --exclude "*.py" \
-          --delete --acl public-read
+          --exclude ".git/*" --exclude "*.py" --delete --acl public-read
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
@@ -111,3 +98,4 @@ jobs:
 
     - name: Deploy Pages
       uses: actions/deploy-pages@v4
+      continue-on-error: true
