--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -1,4 +1,4 @@
-name: 'V2V Deploy'
+name: 'V2V Pipeline'
 
 on:
   workflow_dispatch:
@@ -18,28 +18,30 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GH_PAT }}
 
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
-    - name: Install Python
+    - name: Install Python Deps
       run: pip install requests PyGithub PyYAML
 
     - name: Run Scraper
-      run: python scraper.py || echo "Scraper done"
-      timeout-minutes: 40
+      run: python scraper.py || true
+      timeout-minutes: 45
       env:
         GH_PAT: ${{ secrets.GH_PAT }}
         GITHUB_SEARCH_LIMIT: 150
 
-    - name: Commit
+    - name: Commit Changes
       run: |
-        git config user.name "Bot"
+        git config user.name "V2V Bot"
         git config user.email "bot@v2v.dev"
-        git add . || true
-        git commit -m "Update" || true
+        git add *.json *.yml *.txt || true
+        git diff --quiet || git commit -m "Update $(date '+%Y-%m-%d')" || true
         git push || true
       continue-on-error: true
 
@@ -49,16 +51,51 @@ jobs:
         node-version: '20'
 
     - name: Install Wrangler
-      run: npm install -g wrangler@latest
+      run: npm install -g wrangler
 
     - name: Deploy Workers
+      if: ${{ secrets.CLOUDFLARE_API_TOKEN != '' }}
+      run: |
+        wrangler deploy --env v2v-proxy || true
+        wrangler deploy --env v2v || true
+        wrangler deploy --env winter-hill-0307 || true
+        wrangler deploy --env rapid-scene-1da6 || true
       env:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+      continue-on-error: true
+
+    - name: Deploy Vercel
+      if: ${{ secrets.VERCEL_TOKEN != '' }}
+      uses: amondnet/vercel-action@v25
+      with:
+        vercel-token: ${{ secrets.VERCEL_TOKEN }}
+        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+        vercel-args: '--prod'
+      continue-on-error: true
+
+    - name: Deploy Arvan
+      if: ${{ secrets.ARVAN_ACCESS_KEY_ID != '' }}
       run: |
-        echo "Deploying workers..."
-        wrangler deploy --env v2v-proxy || echo "v2v-proxy failed"
-        wrangler deploy --env v2v || echo "v2v failed"
-        wrangler deploy --env winter-hill-0307 || echo "winter-hill failed"
-        wrangler deploy --env rapid-scene-1da6 || echo "rapid-scene failed"
+        curl -s "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "aws.zip"
+        unzip -q aws.zip && sudo ./aws/install
+        aws s3 sync . s3://${{ secrets.ARVAN_BUCKET_NAME }}/ \
+          --endpoint-url=https://s3.ir-thr-at1.arvanstorage.ir \
+          --exclude ".git/*" --exclude "*.py" --delete --acl public-read
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
+      continue-on-error: true
+
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+
+    - name: Upload Pages
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: '.'
+
+    - name: Deploy Pages
+      uses: actions/deploy-pages@v4
       continue-on-error: true
