--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -114,12 +114,16 @@ jobs:
     # 5. Deploy to Vercel
     # ═══════════════════════════════════════════════════════════
     - name: Deploy to Vercel
-      uses: amondnet/vercel-action@v25
-      with:
-        vercel-token: ${{ secrets.VERCEL_TOKEN }}
-        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-        vercel-args: '--prod --yes'
+      run: |
+        npm install -g vercel@latest
+        
+        echo "🚀 Deploying to Vercel..."
+        vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }} 2>/dev/null || true
+        vercel build --prod --token=${{ secrets.VERCEL_TOKEN }} 2>/dev/null || true
+        vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }} && echo "✅ Vercel deployed" || echo "⚠️ Vercel skipped"
+      env:
+        VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+        VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
       continue-on-error: true
 
     # ═══════════════════════════════════════════════════════════
